@@ -3,7 +3,9 @@ BETA PUBLIC RELEASE VERSION 0.2.5       ??-??-02
 #############################################################################
  
   * Added RPM capabilities courtesy of Steve Bond.
-
+  * Made charge-field energy evaluation consistent for user-supplied charge
+    maps
+  * Removed annoying excess verbosity from Vgrid
 
 #############################################################################
 BETA PUBLIC RELEASE VERSION 0.2.4       10-21-02
